src/test/ui/track-diagnostics/track5.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/track5.rs:LL:CC
   |
LL | }
   | ^ unexpected closing delimiter
-Ztrack-diagnostics: created at compiler/rustc_parse/src/lexer/tokentrees.rs:LL:CC

error: aborting due to previous error

